[package]
name = "toml-merge"
version = "0.1.0"
description = "Simple CLI utility which merges TOML files."
authors = ["Reid Rankin <reidrankin@gmail.com>"]
license = "ISC"
repository = "https://github.com/reidrankin/toml-merge"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
structopt = "0.3.21"
toml = "0.5.8"
