[package]
name = "toml-merge"
version = "0.2.0"
description = "Simple CLI utility which merges TOML files."
authors = ["Reid Rankin <reidrankin@gmail.com>"]
license = "ISC"
repository = "https://github.com/reidrankin/toml-merge"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
structopt = "0.3.26"
toml = "0.9.7"
